            Fixed: OSDMenu's scrollbar bottom position was 3 px too high (368 - 2 * 12 - 20 = 324)
            Fixed: OSDMenu's selected list item lacked the 2 px separation line at its bottom
            Fixed: OSDMenu's scrollbar was 1 px too far to the right (659 is end of the background, 660 the necessary gap)
2018-12-06: Fixed: OSDMenuButtonAdd() didn't utilize struct member FontButtons
            Fixed: Limit button drawing to the end of the separation line (minus margin)
            Fixed: OSDMenu's left title was 3 px too far to the right and 1 px too low (right title was 3 px too low)
            Fixed: OSDMenu's progress bar was 1 px too close to the left ((720 - 252) / 2 = 234)
            Fixed: OSDMenu's color picker was 2 px too high up, buttons and color box were 3 px too far from the bottom and color box was 1 px too close to the left
2019-01-17: Fixed: Reset "Dirty" flags after drawing to avoid repetitive redrawing of all OSD content
2019-01-18: Added: FB_DEBUG and FB_DEBUG_FULL to enable debugging which is disabled by default now (FB_NO_DEBUG and FB_LIBRARY_COMPILATION have been removed)
2019-02-11: Fixed: Limit the number of InfoBox lines and MessageBox lines to 7 (which is the maximum number of lines that can be displayed)
            Fixed: FMUC_FreeFontFile() closed a font file even if the file handle was invalid due to an open error
            Fixed: FMUC_GetGlyphData() sought for glyphs even if the file handle was invalid due to an open or header error
2019-02-18: Fixed: OSDMenuPush() and OSDMenuPop() missed to set OSDDirty
2019-02-19: Fixed: Improved several flash structs and helper functions. Thanks to chris86
2019-02-20: Fixed: Modified FlashServiceFindNum() so that it will find services even if a transponder occupies more than one transponder entry (e.g. 1MHz offset)
2019-02-21: Fixed: The title area has never been erased if marked dirty
            Fixed: The logo area has never been erased if marked dirty