@@ -1080,3 +1080,4 @@ The following functions accept any form a path. The INI and language INI functio
 2019-02-20: Fixed: Modified FlashServiceFindNum() so that it will find services even if a transponder occupies more than one transponder entry (e.g. 1MHz offset)
 2019-02-21: Fixed: The title area has never been erased if marked dirty
             Fixed: The logo area has never been erased if marked dirty
+2019-02-22: Added: DO_SYNC and NO_SYNC - human-friendly arguments to OSDMenuUpdate()
